--- a/HandsFree/App/build.gradle
+++ b/HandsFree/App/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 apply plugin: 'android'
@@ -13,23 +13,26 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 18
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 23
+        minSdkVersion 18
+        targetSdkVersion 20
     }
     buildTypes {
         release {
-            runProguard true
-            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+              proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
         }
     }
     productFlavors {
         defaultFlavor {
             proguardFile 'proguard-rules.txt'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
     }
 }
 
