--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2013 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,101 +20,85 @@
     android:versionName="1.0">
 
     <!-- Min/target SDK versions (<uses-sdk>) managed by build.gradle -->
-    
+
     <!-- Declare this required feature if you want to make the app available to BLE-capable
     devices only.  If you want to make your app available to devices that don't support BLE,
     you should omit this in the manifest.  Instead, determine BLE capability by using
     PackageManager.hasSystemFeature(FEATURE_BLUETOOTH_LE) -->
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <application android:label="@string/app_name"
+    <application
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@android:style/ThemeOverlay.Material.ActionBar">
-        <activity android:name=".MainActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name=".DeviceControlActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".DeviceScanActivity"
+            android:screenOrientation="portrait"
+            android:exported="true" />
+
+        <!-- <activity android:name=".DeviceControlActivity" android:exported="true"/> -->
+        <service
+            android:name=".bluetoothlegatt.BluetoothLeService"
+            android:enabled="true" />
+    </application>
+
+    <!--
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher"
+                 android:theme="@android:style/Theme.Holo.Light">
+        <activity android:name=".bluetoothlegatt.DeviceScanActivity"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action   android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".bluetoothlegatt.DeviceControlActivity" android:exported="true"/>
+        <service  android:name=".bluetoothlegatt.BluetoothLeService" android:enabled="true"/>
 
-        <activity android:name=".DeviceScanActivity" android:exported="true"/>
+        <activity
+            android:name=".websocketduplex.NetworkActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".bluetoothlegatt.DeviceScanActivity">
+        </activity>
 
-    <!-- <activity android:name=".DeviceControlActivity" android:exported="true"/> -->
-    <service  android:name=".bluetoothlegatt.BluetoothLeService" android:enabled="true"/>
+        <activity
+            android:name=".websocketduplex.ClientActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".websocketduplex.NetworkActivity">
+        </activity>
 
-    <activity
-        android:name=".NetworkActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".MainActivity"
-        android:exported="true">
-    </activity>
+        <activity
+            android:name=".websocketduplex.ServerActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".websocketduplex.NetworkActivity">
+        </activity>
 
-    <activity
-        android:name=".ClientActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".NetworkActivity">
-    </activity>
+        <activity
+            android:name=".websocketduplex.DuplexActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".websocketduplex.NetworkActivity">
+        </activity>
 
-    <activity
-        android:name=".ServerActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".NetworkActivity">
-    </activity>
-
-    <activity
-        android:name=".DuplexActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".NetworkActivity">
-    </activity>
-
-
-</application>
-
-<!--
-<application android:label="@string/app_name"
-             android:icon="@drawable/ic_launcher"
-             android:theme="@android:style/Theme.Holo.Light">
-    <activity android:name=".bluetoothlegatt.DeviceScanActivity"
-              android:label="@string/app_name">
-        <intent-filter>
-            <action   android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-    </activity>
-    <activity android:name=".bluetoothlegatt.DeviceControlActivity" android:exported="true"/>
-    <service  android:name=".bluetoothlegatt.BluetoothLeService" android:enabled="true"/>
-
-    <activity
-        android:name=".websocketduplex.NetworkActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".bluetoothlegatt.DeviceScanActivity">
-    </activity>
-
-    <activity
-        android:name=".websocketduplex.ClientActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".websocketduplex.NetworkActivity">
-    </activity>
-
-    <activity
-        android:name=".websocketduplex.ServerActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".websocketduplex.NetworkActivity">
-    </activity>
-
-    <activity
-        android:name=".websocketduplex.DuplexActivity"
-        android:screenOrientation="portrait"
-        android:parentActivityName=".websocketduplex.NetworkActivity">
-    </activity>
-
-</application>
--->
+    </application>
+    -->
 </manifest>
