--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/ThemeOverlay.Material.ActionBar">
+        android:theme="@style/Theme.AppCompat">
+        <!--android:theme="@android:style/ThemeOverlay.Material.ActionBar">-->
         <activity
             android:name=".DeviceControlActivity"
             android:label="@string/app_name"
