--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="by.citech"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="by.citech">
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -20,6 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat">
         <!--android:theme="@android:style/ThemeOverlay.Material.ActionBar">-->
+
         <activity
             android:name=".DeviceControlActivity"
             android:label="@string/app_name"
@@ -30,9 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".DeviceControlActivity"/>
+
         <service
             android:name=".bluetoothlegatt.BluetoothLeService"
             android:enabled="true" />
+
     </application>
 
 </manifest>
