--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/AppTheme">
+        <!--android:theme="@style/Theme.AppCompat">-->
         <!--android:theme="@android:style/ThemeOverlay.Material.ActionBar">-->
 
         <activity
