--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="by.citech.handsfree">
 
     <uses-feature
@@ -17,8 +18,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <!--android:theme="@style/Theme.AppCompat">-->
-        <!--android:theme="@android:style/ThemeOverlay.Material.ActionBar">-->
 
         <activity
             android:name="by.citech.handsfree.DeviceControlActivity"
@@ -26,7 +25,6 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
