--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:name=".application.ThisApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="by.citech.handsfree.DeviceControlActivity"
+            android:name="by.citech.handsfree.activity.CallActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -30,9 +31,9 @@
         </activity>
 
         <activity
-            android:name="by.citech.handsfree.SettingsActivity"
+            android:name="by.citech.handsfree.activity.SettingsActivity"
             android:screenOrientation="portrait"
-            android:parentActivityName="by.citech.handsfree.DeviceControlActivity"/>
+            android:parentActivityName="by.citech.handsfree.activity.CallActivity"/>
 
         <service
             android:name="by.citech.handsfree.bluetoothlegatt.BluetoothLeService"
