--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="by.citech.handsfree">
 
     <uses-feature
@@ -19,25 +18,31 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="by.citech.handsfree.activity.CallActivity"
+            android:name=".activity.CallActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name="by.citech.handsfree.activity.SettingsActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName="by.citech.handsfree.activity.CallActivity"/>
+            android:name=".activity.SettingsActivity"
+            android:parentActivityName=".activity.CallActivity"
+            android:screenOrientation="portrait" />
 
-        <!--<service-->
-            <!--android:name="by.citech.handsfree.bluetoothlegatt.BluetoothLeService"-->
-            <!--android:enabled="true" />-->
+        <activity
+            android:name=".activity.ExitActivity"
+            android:excludeFromRecents="true"
+            android:autoRemoveFromRecents="true"
+            android:theme="@android:style/Theme.NoDisplay" />
+
+        <!-- <service -->
+        <!-- android:name="by.citech.handsfree.bluetoothlegatt.BluetoothLeService" -->
+        <!-- android:enabled="true" /> -->
 
     </application>
 
